[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idmcore"
version = "0.1.0"
description = "Identity governance core: filter, runtime, role enforcement, diagnostics, policy cache"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["idmcore*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "__eval_*.py"]
testpaths = ["tests"]
